Adding flag for removing credit cards in Unix timestamp (#137)
* #130 Adding option to ignore credit cards when in a Unix timestamp.

* #130 Adding option to ignore credit cards when in a Unix timestamp.

* #130 Adding property to docs.